--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name="case2.iths.com.com.iths.case2.MainActivity" >
+        <activity android:name="case2.iths.com.case2.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 
