--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,7 @@
         <activity
             android:name=".LayoutExamples.LayoutExampleActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
-        </activity>
+            android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
@@ -29,29 +28,22 @@
         <activity
             android:name=".StatisticActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".ProfileActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".HandleQuestionsActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".ResultActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".PlayGameActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".LayoutExamples.MoonActivity"
-            android:screenOrientation="portrait" >
-
-        </activity>
-
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".SettingsActivity"></activity>
     </application>
 
 </manifest>
