--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         <activity
             android:name=".LayoutExamples.LayoutExampleActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
 
         <meta-data
             android:name="preloaded_fonts"
@@ -42,8 +42,9 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".LayoutExamples.MoonActivity"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name=".SettingsActivity"></activity>
+            android:screenOrientation="portrait" />
+        <activity android:name=".SettingsActivity" />
+        <activity android:name=".AboutActivity"></activity>
     </application>
 
 </manifest>
