--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".LayoutExamples.LayoutExampleActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.NoActionBar" />
-
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
@@ -40,12 +35,9 @@
         <activity
             android:name=".PlayGameActivity"
             android:screenOrientation="portrait" />
-        <activity
-            android:name=".LayoutExamples.MoonActivity"
-            android:screenOrientation="portrait" />
         <activity android:name=".SettingsActivity" />
         <activity android:name=".AboutActivity" />
-        <activity android:name=".GameMenuActivity"></activity>
+        <activity android:name=".GameMenuActivity" />
     </application>
 
 </manifest>
