--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SinglePlayerActivity"></activity>
+        <activity android:name=".SinglePlayerActivity" />
+        <activity android:name=".Multiplayer"></activity>
     </application>
 
 </manifest>
