--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "case2.iths.com.ithscas2"
+        applicationId "case2.iths.com.QuizGame"
         minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
