Added method in QuizableDBHelper that only returns rows containing specific category.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
         </activity>
         <activity android:name=".SinglePlayerActivity" />
         <activity android:name=".Multiplayer" />
-        <activity android:name=".CreateQuestionActivity"></activity>
+        <activity android:name=".CreateQuestionActivity" />
     </application>
 
 </manifest>
