--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,10 +23,12 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".HandleStatementsActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:noHistory="true"/>
         <activity
             android:name=".ResultActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:noHistory="true"/>
         <activity
             android:name=".PlayGameActivity"
             android:screenOrientation="portrait" />
@@ -41,7 +43,8 @@
             android:screenOrientation="portrait"/>
         <activity
             android:name=".SplashActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -49,16 +52,19 @@
         </activity>
         <activity
             android:name=".SinglePlayerActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:noHistory="true"/>
         <activity
             android:name=".Multiplayer"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".CreateQuestionActivity"
-            android:screenOrientation="portrait"/>
+            android:name=".CreateStatementActivity"
+            android:screenOrientation="portrait"
+            android:noHistory="true"/>
         <activity
             android:name=".EditStatementActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:noHistory="true"/>
     </application>
 
 </manifest>
