--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,7 +68,15 @@
             android:name=".EditStatementActivity"
             android:noHistory="true"
             android:screenOrientation="portrait" />
-        <activity android:name=".AmountOfStatementsActivity"></activity>
+        <activity android:name=".AmountOfStatementsActivity"
+            android:screenOrientation="portrait"
+            android:noHistory="true"
+            />
+        <activity android:name=".CountdownSplashActivity"
+            android:screenOrientation="portrait"
+            android:noHistory="true"
+
+            />
     </application>
 
 </manifest>
