Started a new activity for SMS-function Created base layout in activity_sms.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,7 +79,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".CreateProfileActivity"
-            android:noHistory="true"></activity>
+            android:noHistory="true" />
+        <activity android:name=".SmsActivity"></activity>
     </application>
 
 </manifest>
