--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="case2.iths.com.QuizGame">
 
+    <uses-permission
+        android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_brain_square"
@@ -9,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_brain_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait" />
@@ -80,7 +84,7 @@
         <activity
             android:name=".CreateProfileActivity"
             android:noHistory="true" />
-        <activity android:name=".SmsActivity"></activity>
+        <activity android:name=".JSONTask"></activity>
     </application>
 
 </manifest>
