Added javadocs to HighscoresAdapter, ProfileAdapter, ProfilesCursorAdapter, QuizableDatabaseContract, SinglePlayerActivity, StatementsAdapter, QuizableOpenHelper. Changed also category database table. Created separate packages for Adapters and Database

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,7 +81,7 @@
         <activity
             android:name=".CreateProfileActivity"
             android:noHistory="true" />
-        <activity android:name=".JSONTask"></activity>
+        <activity android:name=".Data.JSONTask"></activity>
     </application>
 
 </manifest>
